# PyCourt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cleanup.sh  config.md  install.md  mkdocs.yml  pycourt.yaml  pyproject.toml  qa.sh  qaf.sh  qas.sh
.github/workflows/: deploy-docs.yml
docs/: changelog.md  index.html  index.md
docs/arsenal/: community.md  qa.md  qaf.md  qas.md
docs/css/: brand.css
docs/engine/: cli.md  config.md  index.md
docs/exper/: constants_style.md
docs/guide/: constants_style.md  getting_started.md
docs/guide/community/: contribute.md
docs/guide/started/: config.md  index.md  install.md  runtime.md
docs/laws/: ac001.md  index.md
docs/playbooks/: index.md  timeos_case.md
docs/script/: qa.sh  qaf.sh  qas.sh
docs/script/community/: index.md
docs/script/official/: index.md  qa.md  qa.sh  qaf.md  qaf.sh  qas.md  qas.sh
docs/static/: README.md
docs/static/css/: brand.css
docs/zh/: README.md  README_zh.md  index.html
pycourt/: cli.py  judge.py  utils.py
pycourt/config/: config.py  read_toml.py
pycourt/laws/: tp001.py
pycourt/yaml/: judges_text.en.yaml  judges_text.zh.yaml
